--- a/apps/rapid-cmi5-electron-frontend/src/assets/fonts/stylesheet.css
+++ b/apps/rapid-cmi5-electron-frontend/src/assets/fonts/stylesheet.css
@@ -3,7 +3,7 @@
   font-family: 'Roboto';
   src:
     local('Roboto-Bold'),
-    url('./Roboto/Roboto-Bold.ttf') format('truetype');
+    url('/assets/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -11,7 +11,7 @@
   font-family: 'Roboto';
   src:
     local('Roboto-Italic'),
-    url('./Roboto/Roboto-Italic.ttf') format('truetype');
+    url('/assets/fonts/Roboto/Roboto-Italic.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -19,7 +19,7 @@
   font-family: 'Roboto';
   src:
     local('Roboto-Medium'),
-    url('./Roboto/Roboto-Medium.ttf') format('truetype');
+    url('/assets/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -27,7 +27,7 @@
   font-family: 'Roboto';
   src:
     local('Roboto-MediumItalic'),
-    url('./Roboto/Roboto-MediumItalic.ttf') format('truetype');
+    url('/assets/fonts/Roboto/Roboto-MediumItalic.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -35,7 +35,7 @@
   font-family: 'Roboto';
   src:
     local('Roboto-Regular'),
-    url('./Roboto/Roboto-Regular.ttf') format('truetype');
+    url('/assets/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -44,7 +44,7 @@
   font-family: 'BarlowCondensed';
   src:
     local('BarlowCondensed-Bold'),
-    url('./BarlowCondensed/BarlowCondensed-Bold.ttf') format('truetype');
+    url('/assets/fonts/BarlowCondensed/BarlowCondensed-Bold.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -52,7 +52,7 @@
   font-family: 'BarlowCondensed';
   src:
     local('BarlowCondensed-Italic'),
-    url('./BarlowCondensed/BarlowCondensed-Italic.ttf') format('truetype');
+    url('/assets/fonts/BarlowCondensed/BarlowCondensed-Italic.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -60,7 +60,7 @@
   font-family: 'BarlowCondensed';
   src:
     local('BarlowCondensed-Medium'),
-    url('./BarlowCondensed/BarlowCondensed-Medium.ttf') format('truetype');
+    url('/assets/fonts/BarlowCondensed/BarlowCondensed-Medium.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -68,7 +68,7 @@
   font-family: 'BarlowCondensed';
   src:
     local('BarlowCondensed-MediumItalic'),
-    url('./BarlowCondensed/BarlowCondensed-MediumItalic.ttf') format('truetype');
+    url('/assets/fonts/BarlowCondensed/BarlowCondensed-MediumItalic.ttf') format('truetype');
   font-weight: normal;
 }
 
@@ -76,6 +76,6 @@
   font-family: 'BarlowCondensed';
   src:
     local('BarlowCondensed-Regular'),
-    url('./BarlowCondensed/BarlowCondensed-Regular.ttf') format('truetype');
+    url('/assets/fonts/BarlowCondensed/BarlowCondensed-Regular.ttf') format('truetype');
   font-weight: normal;
 }
