--- a/apps/cc-cmi5-player/src/styles.css
+++ b/apps/cc-cmi5-player/src/styles.css
@@ -173,10 +173,17 @@ audio::-moz-media-controls {
 .rc5-table .rightAlignedCell { text-align: right; }
 .rc5-table .centeredCell { text-align: center; }
 
+
 @layer base {
   html,
   body {
-    @apply w-full overflow-x-hidden overflow-y-hidden antialiased;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    -webkit-font-smoothing: antialiased;
   }
   .container {
     @apply mx-auto px-4 sm:px-6 md:px-8;
